# discordbot

./: .env.example  .gitignore  README.md  __init__.py  config.json  crud.py  manifest.json  migrations.py  models.py  pyproject.toml  settings.py  tasks.py  views_api.py
bot/: __main__.py  api.py  client.py  settings.py  ui.py  utils.py
discordbot/: __main__.py  api.py  client.py  models.py  settings.py  ui.py
templates/discordbot/: _api_docs.html  index.html
